--- a/Frontend_Stack/.env
+++ b/Frontend_Stack/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://ben-job-tracker-ac5542a936fb.herokuapp.com/
+NEXT_PUBLIC_API_URL=https://ben-job-tracker-ac5542a936fb.herokuapp.com/api
